Version 1007:
- Some changes due to JOSM API Development.
Version 1006:
- Some changes due to JOSM API Development.
Version 1005:
- New button "Multiply circular".
Version 1004:
- Button label "Straight wall" changed into label "Straight way".
- Button label "From circle to polygon" changed into label "From polygon to circle".
- Button label "From ellipse to polygon" changed into label "From polygon to ellipse". 