@@ -4,7 +4,7 @@
     <!-- enter the SVN commit message -->
     <property name="commit.message" value="Commit message"/>
     <!-- enter the *lowest* JOSM version this plugin is currently compatible with -->
-    <property name="plugin.main.version" value="10580"/>
+    <property name="plugin.main.version" value="10581"/>
 
     <!-- Configure these properties (replace "..." accordingly).
          See http://josm.openstreetmap.de/wiki/DevelopersGuide/DevelopingPlugins
@@ -13,7 +13,7 @@
     <property name="plugin.class" value="org.openstreetmap.josm.plugins.cadtools.CADToolsPlugin"/>
     <property name="plugin.description" value="Allows the user to make small changes to some selected buildings . "/>
     <property name="plugin.icon" value="images/dialogs/iconita.png"/>
-    <property name="version.entry.commit.revision" value="1007"/>
+    <property name="version.entry.commit.revision" value="1008"/>
     <property name="plugin.link" value="https://wiki.openstreetmap.org/wiki/JOSM/Plugins/CADTools"/>
     <!--<property name="plugin.early" value="..."/>-->
     <!--<property name="plugin.requires" value="..."/>-->
